// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Login Page should login success 1`] = `
<DocumentFragment>
  <div
    class="ant-app css-var-«r6»"
  >
    <div
      class="acss-trkbkn"
    >
      <div
        class="acss-1asxt4z"
        data-lang="true"
      >
        <span
          class="ant-dropdown-trigger"
          style="cursor: pointer; padding: 12px; display: inline-flex; align-items: center; justify-content: center; font-size: 18px; vertical-align: middle;"
        >
          <i
            class="anticon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                class="css-c4d79v"
                d="M12.87 15.07l-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z "
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        style="flex: 1; padding: 32px 0px;"
      >
        <div
          class="ant-pro-form-login-container "
        >
          <div
            class="ant-pro-form-login-top"
          >
            <div
              class="ant-pro-form-login-header "
            >
              <span
                class="ant-pro-form-login-logo "
              >
                <img
                  alt="logo"
                  src="/logo.svg"
                />
              </span>
              <span
                class="ant-pro-form-login-title "
              >
                Ant Design
              </span>
            </div>
            <div
              class="ant-pro-form-login-desc "
            >
              Ant Design is the most influential web design specification in Xihu district
            </div>
          </div>
          <div
            class="ant-pro-form-login-main "
            style="width: 328px; min-width: 280px; max-width: 75vw;"
          >
            <form
              autocomplete="off"
              class="ant-form ant-form-vertical css-var-«r6» ant-form-css-var ant-pro-form"
            >
              <input
                style="display: none;"
                type="text"
              />
              <div
                class="ant-form-item css-var-«r6» ant-form-css-var ant-form-item-has-success ant-form-item-vertical"
              >
                <div
                  class="ant-row ant-form-item-row css-var-«r6»"
                >
                  <div
                    class="ant-col ant-form-item-control css-var-«r6»"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-focused ant-input-affix-wrapper-lg ant-input-outlined ant-input-status-success css-var-«r6» ant-input-css-var"
                        >
                          <span
                            class="ant-input-prefix"
                          >
                            <span
                              aria-label="mail"
                              class="anticon anticon-mail"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="mail"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0068.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
                                />
                              </svg>
                            </span>
                          </span>
                          <input
                            class="ant-input ant-input-lg"
                            id="email"
                            placeholder="Email: user@example.com"
                            type="email"
                            value="test-user@example.com"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <button
                              class="ant-input-clear-icon"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                aria-label="close-circle"
                                class="anticon anticon-close-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="close-circle"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item css-var-«r6» ant-form-css-var ant-form-item-has-success ant-form-item-vertical"
              >
                <div
                  class="ant-row ant-form-item-row css-var-«r6»"
                >
                  <div
                    class="ant-col ant-form-item-control css-var-«r6»"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-lg ant-input-outlined ant-input-status-success ant-input-password ant-input-password-large css-var-«r6» ant-input-css-var"
                        >
                          <span
                            class="ant-input-prefix"
                          >
                            <span
                              aria-label="lock"
                              class="anticon anticon-lock"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="lock"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                                />
                              </svg>
                            </span>
                          </span>
                          <input
                            class="ant-input ant-input-lg"
                            id="password"
                            placeholder="Password: ******"
                            type="password"
                            value="secret"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              aria-label="eye-invisible"
                              class="anticon anticon-eye-invisible ant-input-password-icon"
                              role="img"
                              tabindex="-1"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="eye-invisible"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                />
                                <path
                                  d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                style="margin-bottom: 24px;"
              >
                <label
                  class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-var-«r6» ant-checkbox-css-var"
                >
                  <span
                    class="ant-checkbox ant-wave-target ant-checkbox-checked"
                  >
                    <input
                      checked=""
                      class="ant-checkbox-input"
                      id="autoLogin"
                      type="checkbox"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-checkbox-label"
                  >
                    Remember me
                  </span>
                </label>
                <a
                  style="float: right;"
                >
                  Forgot Password ?
                </a>
              </div>
              <button
                class="ant-btn css-var-«r6» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg"
                style="width: 100%;"
                type="button"
              >
                <span>
                  Login
                </span>
              </button>
            </form>
            <div
              class="ant-pro-form-login-main-other "
            >
              Login with :
              <div
                class="acss-1c1kq07"
              >
                <button
                  class="ant-btn css-var-«r6» ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg ant-btn-block"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="google"
                      class="anticon anticon-google"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="google"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span>
                    Sign in with Google
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <footer
        class="ant-layout-footer css-var-«r6»"
        style="padding: 0px; background: none;"
      >
        <div
          class="ant-pro-global-footer"
        >
          <div
            class="ant-pro-global-footer-list"
          >
            <a
              class="ant-pro-global-footer-list-link"
              href="https://pro.ant.design"
              rel="noreferrer"
              target="_blank"
              title="Crew Dashboard"
            >
              Crew Dashboard
            </a>
            <a
              class="ant-pro-global-footer-list-link"
              href="https://github.com/ant-design/ant-design-pro"
              rel="noreferrer"
              target="_blank"
              title="github"
            >
              <span
                aria-label="github"
                class="anticon anticon-github"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="github"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                  />
                </svg>
              </span>
            </a>
            <a
              class="ant-pro-global-footer-list-link"
              href="https://ant.design"
              rel="noreferrer"
              target="_blank"
              title="Ant Design"
            >
              Ant Design
            </a>
          </div>
          <div
            class="ant-pro-global-footer-copyright"
          >
            <span
              aria-label="copyright"
              class="anticon anticon-copyright"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="copyright"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm5.6-532.7c53 0 89 33.8 93 83.4.3 4.2 3.8 7.4 8 7.4h56.7c2.6 0 4.7-2.1 4.7-4.7 0-86.7-68.4-147.4-162.7-147.4C407.4 290 344 364.2 344 486.8v52.3C344 660.8 407.4 734 517.3 734c94 0 162.7-58.8 162.7-141.4 0-2.6-2.1-4.7-4.7-4.7h-56.8c-4.2 0-7.6 3.2-8 7.3-4.2 46.1-40.1 77.8-93 77.8-65.3 0-102.1-47.9-102.1-133.6v-52.6c.1-87 37-135.5 102.2-135.5z"
                />
              </svg>
            </span>
             Powered by Ant Desgin
          </div>
        </div>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Login Page should show login form 1`] = `
<DocumentFragment>
  <div
    class="ant-app css-var-«r0»"
  >
    <div
      class="acss-trkbkn"
    >
      <div
        class="acss-1asxt4z"
        data-lang="true"
      >
        <span
          class="ant-dropdown-trigger"
          style="cursor: pointer; padding: 12px; display: inline-flex; align-items: center; justify-content: center; font-size: 18px; vertical-align: middle;"
        >
          <i
            class="anticon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                class="css-c4d79v"
                d="M12.87 15.07l-2.54-2.51.03-.03c1.74-1.94 2.98-4.17 3.71-6.53H17V4h-7V2H8v2H1v1.99h11.17C11.5 7.92 10.44 9.75 9 11.35 8.07 10.32 7.3 9.19 6.69 8h-2c.73 1.63 1.73 3.17 2.98 4.56l-5.09 5.02L4 19l5-5 3.11 3.11.76-2.04zM18.5 10h-2L12 22h2l1.12-3h4.75L21 22h2l-4.5-12zm-2.62 7l1.62-4.33L19.12 17h-3.24z "
              />
            </svg>
          </i>
        </span>
      </div>
      <div
        style="flex: 1; padding: 32px 0px;"
      >
        <div
          class="ant-pro-form-login-container "
        >
          <div
            class="ant-pro-form-login-top"
          >
            <div
              class="ant-pro-form-login-header "
            >
              <span
                class="ant-pro-form-login-logo "
              >
                <img
                  alt="logo"
                  src="/logo.svg"
                />
              </span>
              <span
                class="ant-pro-form-login-title "
              >
                Ant Design
              </span>
            </div>
            <div
              class="ant-pro-form-login-desc "
            >
              Ant Design is the most influential web design specification in Xihu district
            </div>
          </div>
          <div
            class="ant-pro-form-login-main "
            style="width: 328px; min-width: 280px; max-width: 75vw;"
          >
            <form
              autocomplete="off"
              class="ant-form ant-form-vertical css-var-«r0» ant-form-css-var ant-pro-form"
            >
              <input
                style="display: none;"
                type="text"
              />
              <div
                class="ant-form-item css-var-«r0» ant-form-css-var ant-form-item-vertical"
              >
                <div
                  class="ant-row ant-form-item-row css-var-«r0»"
                >
                  <div
                    class="ant-col ant-form-item-control css-var-«r0»"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-focused ant-input-affix-wrapper-lg ant-input-outlined css-var-«r0» ant-input-css-var"
                        >
                          <span
                            class="ant-input-prefix"
                          >
                            <span
                              aria-label="mail"
                              class="anticon anticon-mail"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="mail"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0068.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
                                />
                              </svg>
                            </span>
                          </span>
                          <input
                            class="ant-input ant-input-lg"
                            id="email"
                            placeholder="Email: user@example.com"
                            type="email"
                            value=""
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <button
                              class="ant-input-clear-icon ant-input-clear-icon-hidden"
                              tabindex="-1"
                              type="button"
                            >
                              <span
                                aria-label="close-circle"
                                class="anticon anticon-close-circle"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="close-circle"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item css-var-«r0» ant-form-css-var ant-form-item-vertical"
              >
                <div
                  class="ant-row ant-form-item-row css-var-«r0»"
                >
                  <div
                    class="ant-col ant-form-item-control css-var-«r0»"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper ant-input-affix-wrapper-lg ant-input-outlined ant-input-password ant-input-password-large css-var-«r0» ant-input-css-var"
                        >
                          <span
                            class="ant-input-prefix"
                          >
                            <span
                              aria-label="lock"
                              class="anticon anticon-lock"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="lock"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                                />
                              </svg>
                            </span>
                          </span>
                          <input
                            class="ant-input ant-input-lg"
                            id="password"
                            placeholder="Password: ******"
                            type="password"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              aria-label="eye-invisible"
                              class="anticon anticon-eye-invisible ant-input-password-icon"
                              role="img"
                              tabindex="-1"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="eye-invisible"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                />
                                <path
                                  d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                />
                              </svg>
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                style="margin-bottom: 24px;"
              >
                <label
                  class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-var-«r0» ant-checkbox-css-var"
                >
                  <span
                    class="ant-checkbox ant-wave-target ant-checkbox-checked"
                  >
                    <input
                      checked=""
                      class="ant-checkbox-input"
                      id="autoLogin"
                      type="checkbox"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span
                    class="ant-checkbox-label"
                  >
                    Remember me
                  </span>
                </label>
                <a
                  style="float: right;"
                >
                  Forgot Password ?
                </a>
              </div>
              <button
                class="ant-btn css-var-«r0» ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-lg"
                style="width: 100%;"
                type="button"
              >
                <span>
                  Login
                </span>
              </button>
            </form>
            <div
              class="ant-pro-form-login-main-other "
            >
              Login with :
              <div
                class="acss-1c1kq07"
              >
                <button
                  class="ant-btn css-var-«r0» ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-lg ant-btn-block"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="google"
                      class="anticon anticon-google"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="google"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M881 442.4H519.7v148.5h206.4c-8.9 48-35.9 88.6-76.6 115.8-34.4 23-78.3 36.6-129.9 36.6-99.9 0-184.4-67.5-214.6-158.2-7.6-23-12-47.6-12-72.9s4.4-49.9 12-72.9c30.3-90.6 114.8-158.1 214.7-158.1 56.3 0 106.8 19.4 146.6 57.4l110-110.1c-66.5-62-153.2-100-256.6-100-149.9 0-279.6 86-342.7 211.4-26 51.8-40.8 110.4-40.8 172.4S151 632.8 177 684.6C240.1 810 369.8 896 519.7 896c103.6 0 190.4-34.4 253.8-93 72.5-66.8 114.4-165.2 114.4-282.1 0-27.2-2.4-53.3-6.9-78.5z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span>
                    Sign in with Google
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <footer
        class="ant-layout-footer css-var-«r0»"
        style="padding: 0px; background: none;"
      >
        <div
          class="ant-pro-global-footer"
        >
          <div
            class="ant-pro-global-footer-list"
          >
            <a
              class="ant-pro-global-footer-list-link"
              href="https://pro.ant.design"
              rel="noreferrer"
              target="_blank"
              title="Crew Dashboard"
            >
              Crew Dashboard
            </a>
            <a
              class="ant-pro-global-footer-list-link"
              href="https://github.com/ant-design/ant-design-pro"
              rel="noreferrer"
              target="_blank"
              title="github"
            >
              <span
                aria-label="github"
                class="anticon anticon-github"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="github"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                  />
                </svg>
              </span>
            </a>
            <a
              class="ant-pro-global-footer-list-link"
              href="https://ant.design"
              rel="noreferrer"
              target="_blank"
              title="Ant Design"
            >
              Ant Design
            </a>
          </div>
          <div
            class="ant-pro-global-footer-copyright"
          >
            <span
              aria-label="copyright"
              class="anticon anticon-copyright"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="copyright"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372zm5.6-532.7c53 0 89 33.8 93 83.4.3 4.2 3.8 7.4 8 7.4h56.7c2.6 0 4.7-2.1 4.7-4.7 0-86.7-68.4-147.4-162.7-147.4C407.4 290 344 364.2 344 486.8v52.3C344 660.8 407.4 734 517.3 734c94 0 162.7-58.8 162.7-141.4 0-2.6-2.1-4.7-4.7-4.7h-56.8c-4.2 0-7.6 3.2-8 7.3-4.2 46.1-40.1 77.8-93 77.8-65.3 0-102.1-47.9-102.1-133.6v-52.6c.1-87 37-135.5 102.2-135.5z"
                />
              </svg>
            </span>
             Powered by Ant Desgin
          </div>
        </div>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;
